--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,16 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
-
-    <TextView
-        android:id="@+id/tv_test"
+    android:layout_height="match_parent">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/user_login_background"/>
+    <LinearLayout
+        android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="Hello Login!" />
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_login"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="21dp"
+            android:layout_marginRight="21dp"
+            android:background="@color/base_blue"
+            android:gravity="center"
+            android:text="登录日程"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_hint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="21dp"
+            android:layout_marginRight="21dp"
+            android:layout_marginTop="40dp"
+            android:gravity="center"
+            android:text="船政云日程管理系统"
+            android:textColor="@color/base_gray"
+            android:textSize="12sp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/bottom_layout"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/border_shape_bg_color"
+        android:orientation="vertical">
+        <com.android.mb.movie.widget.ClearEditText
+            android:id="@+id/et_account"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:maxLength="20"
+            android:background="@null"
+            android:imeOptions="actionNext"
+            android:singleLine="true"
+            android:drawableLeft="@mipmap/ic_login_user"
+            android:drawablePadding="10dp"
+            android:inputType="text"
+            android:hint="用户名"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/base_gray"
+            android:textSize="16sp"
+            tools:ignore="TextFields" />
+        <include layout="@layout/common_divider" />
+        <com.android.mb.movie.widget.ClearEditText
+            android:id="@+id/et_pwd"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:maxLength="16"
+            android:background="@null"
+            android:drawableLeft="@mipmap/ic_login_pwd"
+            android:drawablePadding="10dp"
+            android:inputType="textPassword"
+            android:hint="密码"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/base_gray"
+            android:textSize="16sp"
+            tools:ignore="TextFields" />
+    </LinearLayout>
+</RelativeLayout>
