--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- colorPrimary 应用的主要色调，actionBar默认使用该颜色，Toolbar导航栏的底色 -->
-    <color name="colorPrimary">#2aaeff</color>
+    <color name="colorPrimary">#262626</color>
     <!-- colorPrimaryDark 应用的主要暗色调，statusBarColor默认使用该颜色 -->
     <color name="colorPrimaryDark">#ffffffff</color>
     <!-- colorAccent CheckBox，RadioButton，SwitchCompat等一般控件的选中效果默认采用该颜色 -->
@@ -23,9 +23,9 @@
     <color name="base_blue">#2aaeff</color>
     <color name="base_green">#12c136</color>
 
-    <color name="text_color">#3f3a39</color>
-    <color name="edit_color">#5a5655</color>
-    <color name="bg_color">#f4f4f4</color>
+    <color name="text_color">#ffffffff</color>
+    <color name="edit_color">#a5a5a5</color>
+    <color name="bg_color">#0f0f0f</color>
     <color name="gray_45">#454545</color>
     <color name="gray_f4">#f4f4f4</color>
     <color name="gray_4d">#4d4d4d</color>
@@ -33,4 +33,5 @@
     <color name="gray_dc">#dcdcdc</color>
 
     <color name="gray_divider">#e4e2df</color>
+    <color name="base_theme">#262626</color>
 </resources>
