--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:layout_marginRight="21dp"
             android:background="@color/base_blue"
             android:gravity="center"
-            android:text="登录日程"
+            android:text="登录"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
@@ -62,7 +62,7 @@
             android:drawablePadding="10dp"
             android:inputType="text"
             android:hint="用户名"
-            android:textColor="@color/text_color"
+            android:textColor="@color/gray_45"
             android:textColorHint="@color/base_gray"
             android:textSize="16sp"
             tools:ignore="TextFields" />
@@ -81,7 +81,7 @@
             android:drawablePadding="10dp"
             android:inputType="textPassword"
             android:hint="密码"
-            android:textColor="@color/text_color"
+            android:textColor="@color/gray_45"
             android:textColorHint="@color/base_gray"
             android:textSize="16sp"
             tools:ignore="TextFields" />
