--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="base_gray">#a5a5a5</color>
     <color name="base_blue">#2aaeff</color>
     <color name="base_green">#12c136</color>
+    <color name="base_brown">#BB7522</color>
 
     <color name="text_color">#ffffffff</color>
     <color name="edit_color">#a5a5a5</color>
@@ -31,7 +32,7 @@
     <color name="gray_4d">#4d4d4d</color>
     <color name="gray_a5">#a5a5a5</color>
     <color name="gray_dc">#dcdcdc</color>
-
+    AA7540
     <color name="gray_divider">#e4e2df</color>
     <color name="base_theme">#262626</color>
 </resources>
