--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,22 +66,44 @@
             android:textColorHint="@color/base_gray"
             android:textSize="16sp"
             tools:ignore="TextFields" />
+        <include layout="@layout/common_divider" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <com.android.mb.movie.widget.ClearEditText
+                android:id="@+id/et_code"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:maxLength="20"
+                android:background="@null"
+                android:imeOptions="actionNext"
+                android:singleLine="true"
+                android:drawableLeft="@mipmap/verification_code_back"
+                android:drawablePadding="10dp"
+                android:inputType="text"
+                android:hint="验证码"
+                android:textColor="@color/gray_45"
+                android:textColorHint="@color/base_gray"
+                android:textSize="16sp"
+                tools:ignore="TextFields" />
+            <Button
+                android:id="@+id/btn_get_code"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_height="50dp"
+                android:background="@color/transparent"
+                android:layout_marginLeft="10dp"
+                android:text="获取验证码"
+                android:textColor="@color/base_orange" />
+        </LinearLayout>
     </LinearLayout>
     <TextView
-        android:id="@+id/tv_forget_pwd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:gravity="center"
-        android:text="忘记密码?"
-        android:textColor="@color/base_gray"
-        android:textSize="14sp" />
-    <TextView
-        android:id="@+id/tv_login"
+        android:id="@+id/tv_register"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
@@ -90,11 +112,11 @@
         android:enabled="false"
         android:background="@color/base_brown_light"
         android:gravity="center"
-        android:text="登录"
+        android:text="注册"
         android:textColor="@color/white"
         android:textSize="16sp" />
     <TextView
-        android:id="@+id/tv_register"
+        android:id="@+id/tv_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -104,7 +126,7 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:gravity="center"
-        android:text="注册新账号"
+        android:text="已有账号立即登录"
         android:textColor="@color/base_brown"
         android:textSize="16sp" />
 </LinearLayout>
