--- a/app/src/main/res/layout/item_cate.xml
+++ b/app/src/main/res/layout/item_cate.xml
@@ -2,10 +2,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <ImageView
+    <com.android.mb.movie.widget.CircleImageView
         android:id="@+id/iv_cover"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
         android:src="@mipmap/bg_defaults"/>
     <TextView
