--- a/app/src/main/res/layout/common_actionbar_back.xml
+++ b/app/src/main/res/layout/common_actionbar_back.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:padding="10dp"
-            android:src="@mipmap/ic_back" />
+            android:src="@mipmap/ic_back_brown" />
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="180dp"
@@ -25,7 +25,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:singleLine="true"
-            android:textColor="@color/black"
+            android:textColor="@color/base_orange"
             android:textSize="20sp" />
         <TextView
             android:id="@+id/tv_action"
@@ -34,7 +34,7 @@
             android:layout_gravity="end"
             android:gravity="center"
             android:padding="10dp"
-            android:textColor="@color/base_blue"
+            android:textColor="@color/base_orange"
             android:textSize="14sp"
             android:visibility="gone" />
 
