--- a/app/src/main/res/layout/activity_account_manage.xml
+++ b/app/src/main/res/layout/activity_account_manage.xml
@@ -3,40 +3,17 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/base_theme"
-        android:gravity="center_vertical">
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:padding="10dp"
-            android:src="@mipmap/ic_back_brown"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="账号管理"
-            android:textSize="20sp"
-            android:textColor="@color/base_orange"/>
-    </RelativeLayout>
-
     <LinearLayout
+        android:id="@+id/btn_head"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:background="@color/base_theme">
-
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:src="@mipmap/ic_head_s"/>
 
         <TextView
@@ -54,6 +31,7 @@
 
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/btn_nickname"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:orientation="horizontal"
@@ -83,6 +61,7 @@
             android:textColor="@color/white"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/btn_sex"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:orientation="horizontal"
@@ -112,6 +91,7 @@
             android:textColor="@color/white"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/btn_phone"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:orientation="horizontal"
@@ -141,6 +121,7 @@
             android:textColor="@color/white"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/btn_change_pwd"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:orientation="horizontal"
