--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -3,29 +3,8 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/base_theme"
-        android:gravity="center_vertical">
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:padding="10dp"
-            android:src="@mipmap/ic_back_brown"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="设置"
-            android:textSize="20sp"
-            android:textColor="@color/base_orange"/>
-    </RelativeLayout>
-
     <LinearLayout
+        android:id="@+id/btn_account"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:orientation="horizontal"
@@ -43,7 +22,6 @@
             android:textColor="@color/white"/>
 
         <ImageView
-            android:id="@+id/iv_account_manager"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingRight="10dp"
@@ -109,6 +87,7 @@
             android:textColor="@color/white"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/btn_agreement"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:orientation="horizontal"
