--- a/app/src/main/res/layout/frg_main.xml
+++ b/app/src/main/res/layout/frg_main.xml
@@ -9,6 +9,7 @@
         android:background="@color/base_theme"
         android:gravity="center_vertical">
         <TextView
+            android:id="@+id/tv_search"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -24,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:visibility="gone"
             android:src="@mipmap/search"/>
         <ImageView
             android:id="@+id/btn_history"
