--- a/app/src/main/res/layout/frg_find.xml
+++ b/app/src/main/res/layout/frg_find.xml
@@ -16,6 +16,7 @@
             android:textSize="20sp"
             android:textColor="@color/base_orange"/>
         <ImageView
+            android:id="@+id/iv_search"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
