--- a/app/src/main/res/layout/frg_user.xml
+++ b/app/src/main/res/layout/frg_user.xml
@@ -51,6 +51,7 @@
                            android:textSize="14sp"
                            android:text="VIP等级兑换"/>
                        <TextView
+                           android:id="@+id/tv_login"
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
@@ -64,6 +65,7 @@
                            android:text="登录注册"/>
                    </RelativeLayout>
                    <TextView
+                       android:id="@+id/tv_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
@@ -333,7 +335,7 @@
                            android:src="@mipmap/ic_arrow_right_brown"/>
                    </RelativeLayout>
                </LinearLayout>
-               <ImageView
+               <com.android.mb.movie.widget.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
