--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,17 +8,23 @@
         android:background="@color/base_theme"
         android:gravity="center_vertical">
         <com.android.mb.movie.widget.ClearEditText
+            android:id="@+id/et_search"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="34dp"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:gravity="center_vertical"
             android:hint="输入关键词查找片源"
             android:textColorHint="@color/base_gray"
             android:background="@drawable/shape_put"
             android:imeOptions="actionSearch"
-            android:padding="6dp"
-            android:textSize="15sp"
+            android:singleLine="true"
+            android:textSize="14sp"
             android:textColor="@color/base_orange"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:drawablePadding="15dp"
             android:drawableLeft="@mipmap/search"/>
         <TextView
