--- a/app/src/main/res/layout/frg_main.xml
+++ b/app/src/main/res/layout/frg_main.xml
@@ -12,13 +12,17 @@
             android:id="@+id/tv_search"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="34dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
             android:background="@drawable/shape_put"
-            android:padding="6dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="输入关键词查找片源"
-            android:textSize="15sp"
+            android:textSize="14sp"
             android:textColor="@color/base_gray"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:drawablePadding="15dp"
             android:drawableLeft="@mipmap/search"/>
         <ImageView
