--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -38,64 +38,84 @@
             android:textColor="@color/base_orange"
             android:textSize="14sp" />
     </LinearLayout>
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical">
-        <LinearLayout
+        android:layout_height="match_parent">
+       <LinearLayout
+           android:id="@+id/ll_content"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:orientation="vertical">
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_marginTop="30dp"
+               android:orientation="vertical">
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="horizontal">
+                   <TextView
+                       android:layout_width="0dp"
+                       android:layout_weight="1"
+                       android:layout_height="wrap_content"
+                       android:layout_gravity="end"
+                       android:text="历史搜索"
+                       android:padding="10dp"
+                       android:textColor="@color/gray_4d"
+                       android:textSize="14sp" />
+                   <ImageView
+                       android:id="@+id/iv_delete"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:padding="10dp"
+                       android:src="@mipmap/delete"/>
+               </LinearLayout>
+               <com.android.mb.movie.widget.taglayout.FlowTagLayout
+                   android:id="@+id/tagHistory"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"/>
+           </LinearLayout>
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_marginTop="30dp"
+               android:orientation="vertical">
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="horizontal">
+                   <TextView
+                       android:layout_width="0dp"
+                       android:layout_weight="1"
+                       android:layout_height="wrap_content"
+                       android:layout_gravity="end"
+                       android:text="热门搜索"
+                       android:padding="10dp"
+                       android:textColor="@color/gray_4d"
+                       android:textSize="14sp" />
+                   <ImageView
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:visibility="gone"
+                       android:padding="10dp"
+                       android:src="@mipmap/delete"/>
+               </LinearLayout>
+               <com.android.mb.movie.widget.taglayout.FlowTagLayout
+                   android:id="@+id/tagHot"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"/>
+           </LinearLayout>
+       </LinearLayout>
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/refreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="历史搜索"
-                android:padding="10dp"
-                android:textColor="@color/gray_4d"
-                android:textSize="14sp" />
-            <ImageView
-                android:id="@+id/iv_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:src="@mipmap/delete"/>
-        </LinearLayout>
-        <com.android.mb.movie.widget.taglayout.FlowTagLayout
-            android:id="@+id/tagHistory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="热门搜索"
-                android:padding="10dp"
-                android:textColor="@color/gray_4d"
-                android:textSize="14sp" />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:padding="10dp"
-                android:src="@mipmap/delete"/>
-        </LinearLayout>
-        <com.android.mb.movie.widget.taglayout.FlowTagLayout
-            android:id="@+id/tagHot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+            android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="never" />
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+    </FrameLayout>
 </LinearLayout>
