--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -15,6 +15,6 @@
         android:paddingRight="10dp"
         android:paddingTop="5dp"
         android:text="TAG标签"
-        android:textColor="#C3A972" />
+        android:textColor="@color/tag_text_color" />
 
 </LinearLayout>
