--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:layout_marginRight="20dp"
         android:background="@drawable/border_shape_bg_color"
         android:orientation="vertical">
-        <com.android.mb.movie.widget.ClearEditText
+        <com.android.mb.movie.widget.ContainsEmojiEditText
             android:id="@+id/et_account"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -48,7 +48,7 @@
             android:textSize="16sp"
             tools:ignore="TextFields" />
         <include layout="@layout/common_divider" />
-        <com.android.mb.movie.widget.ClearEditText
+        <com.android.mb.movie.widget.ContainsEmojiEditText
             android:id="@+id/et_pwd"
             android:layout_width="match_parent"
             android:layout_height="60dp"
