--- a/app/src/main/res/layout/item_cate.xml
+++ b/app/src/main/res/layout/item_cate.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
-        android:src="@mipmap/bg_defaults"/>
+        android:src="@mipmap/bg_image_defaults"/>
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
