--- a/app/src/main/res/layout/item_find.xml
+++ b/app/src/main/res/layout/item_find.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="6.6万次播放"
+            android:text="0次播放"
             android:textColor="@color/base_gray"
             android:textSize="16sp" />
         <ImageView
