--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/bg_defaults"/>
+        android:src="@mipmap/bg_image_defaults"/>
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
