--- a/app/src/main/res/layout/item_movie_list.xml
+++ b/app/src/main/res/layout/item_movie_list.xml
@@ -3,12 +3,18 @@
     android:layout_height="wrap_content"
     android:padding="10dp"
     android:orientation="horizontal">
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center_vertical"/>
     <ImageView
         android:id="@+id/iv_cover"
         android:layout_width="180dp"
         android:layout_height="120dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/bg_defaults"/>
+        android:src="@mipmap/bg_image_defaults"/>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="1"
@@ -27,9 +33,7 @@
         <com.android.mb.movie.widget.taglayout.FlowTagLayout
             android:id="@+id/tagLayout"
             android:layout_width="match_parent"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:layout_height="66dp"/>
+            android:layout_height="80dp"/>
         <TextView
             android:id="@+id/tv_play_count"
             android:layout_width="match_parent"
