--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item type="id" name="status_fake_status_bar_view" />
     <item type="id" name="status_translucent_view" />
+    <item type="id" name="mb_glide_tag" />
 </resources>
