--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -28,7 +28,7 @@
                 app:layout_collapseMode="parallax"
                 android:fitsSystemWindows="true">
 
-                <com.android.mb.movie.video.LandLayoutVideo
+                <com.android.mb.movie.widget.MyLandLayoutVideo
                     android:id="@+id/detail_player"
                     android:layout_width="match_parent"
                     android:layout_height="200dp" />
