--- a/app/src/main/res/layout/item_find.xml
+++ b/app/src/main/res/layout/item_find.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
+    <com.android.mb.movie.widget.MyVideoPlayerView
         android:id="@+id/video_player"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
