--- a/app/src/main/res/layout/frg_user.xml
+++ b/app/src/main/res/layout/frg_user.xml
@@ -251,6 +251,7 @@
                        android:id="@+id/rl_cache"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
+                       android:visibility="gone"
                        android:padding="15dp">
                        <ImageView
                            android:id="@+id/iv_my_cache"
@@ -293,6 +294,7 @@
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
+                       android:visibility="gone"
                        android:background="@color/gray_divider"/>
                    <RelativeLayout
                        android:id="@+id/rl_favor"
