--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -2,12 +2,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <ImageView
+    <com.android.mb.movie.widget.MyImageView1
         android:id="@+id/iv_cover"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/bg_image_defaults"/>
+        android:src="@mipmap/bg_image_dark"/>
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
