--- a/app/src/main/res/layout/item_movie_h.xml
+++ b/app/src/main/res/layout/item_movie_h.xml
@@ -3,13 +3,13 @@
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
     android:orientation="vertical">
-    <ImageView
+    <com.android.mb.movie.widget.MyImageView2
         android:id="@+id/iv_cover"
         android:layout_width="100dp"
         android:layout_height="140dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
-        android:src="@mipmap/bg_image_defaults"/>
+        android:src="@mipmap/bg_image_dark"/>
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="100dp"
