--- a/app/src/main/res/layout/item_movie_list.xml
+++ b/app/src/main/res/layout/item_movie_list.xml
@@ -9,17 +9,17 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:layout_gravity="center_vertical"/>
-    <ImageView
+    <com.android.mb.movie.widget.MyImageView1
         android:id="@+id/iv_cover"
         android:layout_width="180dp"
         android:layout_height="120dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/bg_image_defaults"/>
+        android:src="@mipmap/bg_image_dark"/>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:id="@+id/tv_title"
@@ -33,11 +33,12 @@
         <com.android.mb.movie.widget.taglayout.FlowTagLayout
             android:id="@+id/tagLayout"
             android:layout_width="match_parent"
-            android:layout_height="80dp"/>
+            android:layout_height="60dp"
+            android:minHeight="60dp"/>
         <TextView
             android:id="@+id/tv_play_count"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:singleLine="true"
             android:textSize="14sp"
