--- a/app/src/main/res/layout/item_movie_grid.xml
+++ b/app/src/main/res/layout/item_movie_grid.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/base_theme"
@@ -30,6 +31,12 @@
             android:textColor="@color/base_gray"
             android:textSize="16sp" />
     </LinearLayout>
+    <com.youth.banner.Banner
+        android:id="@+id/bannerView"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_margin="10dp"
+        app:is_auto_play="true"/>
     <com.android.mb.movie.widget.NestedGridView
         android:id="@+id/gridMovie"
         android:layout_width="match_parent"
