--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -32,6 +32,23 @@
                     android:id="@+id/detail_player"
                     android:layout_width="match_parent"
                     android:layout_height="200dp" />
+                <com.android.mb.movie.widget.MyLandLayoutVideo
+                    android:id="@+id/advert_player"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
+                <TextView
+                    android:id="@+id/tv_skip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="60dp"
+                    android:layout_gravity="right"
+                    android:layout_margin="15dp"
+                    android:text="6"
+                    android:gravity="center"
+                    android:background="@drawable/bg_start_page_circle"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    />
             </FrameLayout>
 
             <android.support.v7.widget.Toolbar
