--- a/app/src/main/res/layout/header_detail.xml
+++ b/app/src/main/res/layout/header_detail.xml
@@ -8,6 +8,13 @@
         android:scaleType="fitXY"
         android:layout_height="200dp"
         android:layout_margin="10dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="推荐"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_recomment"
         android:layout_width="match_parent"
