--- a/app/src/main/res/layout/item_find.xml
+++ b/app/src/main/res/layout/item_find.xml
@@ -6,6 +6,15 @@
         android:id="@+id/video_player"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:singleLine="true"
+        android:textSize="16sp"
+        android:textColor="#333333"
+        android:text="@string/app_name"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,6 +42,7 @@
             android:id="@+id/btn_download"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:padding="10dp"
             android:src="@drawable/btn_movie_download"/>
         <ImageView
