--- a/app/src/main/res/layout/sample_video_land.xml
+++ b/app/src/main/res/layout/sample_video_land.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black">
-
     <FrameLayout
         android:id="@+id/surface_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="48dp"
+        android:layout_marginLeft="48dp"
         android:gravity="center">
     </FrameLayout>
-
     <RelativeLayout
         android:id="@+id/thumb"
         android:layout_width="match_parent"
@@ -139,14 +139,15 @@
         android:layout_toEndOf="@+id/back_tiny"
         android:layout_toRightOf="@+id/back_tiny"
         android:background="@drawable/video_title_bg"
+        android:visibility="visible"
         android:gravity="center_vertical">
-
         <ImageView
             android:id="@+id/back"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:paddingLeft="10dp"
             android:scaleType="centerInside"
+            android:visibility="gone"
             android:src="@drawable/video_back" />
 
         <TextView
@@ -168,5 +169,14 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
         android:visibility="gone" />
-
+    <ImageView
+        android:id="@+id/video_back"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="30dp"
+        android:onClick="onClick"
+        android:padding="10dp"
+        android:layout_centerVertical="true"
+        android:src="@mipmap/ic_video_back"
+        android:visibility="visible" />
 </RelativeLayout>
