--- a/app/src/main/res/layout/header_detail.xml
+++ b/app/src/main/res/layout/header_detail.xml
@@ -2,11 +2,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <ImageView
+    <com.android.mb.movie.widget.MyImageView3
         android:id="@+id/iv_advert"
         android:layout_width="match_parent"
         android:scaleType="fitXY"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"/>
     <TextView
         android:layout_width="wrap_content"
